// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopoverBorderRadius snapshots should render PopoverBorderRadius 1`] = `
<DocumentFragment>
  <div
    class="css-1wfopar PopoverItem"
    data-test-box=""
    data-test-popover-item="0"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="corners"
      height="12"
      name="Corners"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Fixed border radius (100)
    </small>
  </div>
  <div
    class="css-1wfopar PopoverItem"
    data-test-box=""
    data-test-popover-item="1"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="percentage"
      height="12"
      name="Percentage"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Percentage
    </small>
  </div>
</DocumentFragment>
`;

exports[`PopoverBorderRadius snapshots should render with mixed value 1`] = `
<DocumentFragment>
  <div
    class="css-1wfopar PopoverItem"
    data-test-box=""
    data-test-popover-item="0"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="corners"
      height="12"
      name="Corners"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Fixed border radius (100)
    </small>
  </div>
  <div
    class="css-1wfopar PopoverItem"
    data-test-box=""
    data-test-popover-item="1"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="percentage"
      height="12"
      name="Percentage"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Percentage
    </small>
  </div>
</DocumentFragment>
`;
